# fastapi-toy-project

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  LICENSE  README.md  caching_cli.py  caching_srv.py  cli_req.py  client.py  docker-compose.yml  image_info_api.py  main.py  models.py  pyproject.toml  req.py  server.py  services.py  srv_res.py  tasks.py  tests.py  utils.py
api/: 01_basic.py  10_jsonable.py  main.py
api/examples/: 02_query.py  03_path.py  04_body.py  05_field.py  06_ex_data.py  08_extra_model.py  10_jsonable.py  14_async_b.py  15_sync_vs_async.py  logging_lib.py  main.py
api/routers/: users.py
api_basic/: req.py
api_response/: app.py
api_router/: app.py  dependencies.py
api_server/: app.py
apis/: convert_api.py  image_info_api.py
app/: main.py
app/api/: document_ocr.py
app/core/: config.py  middlewares.py
app/redis/: main.py
app/schemas/: image.py
app/utils/: helpers.py
bak/api/examples/: 07_response_model.py  09_exception.py  12_cors.py  13_async_a.py  main.py  test.py
bak/app/: main.py  models.py  services.py  tasks.py  test_api.py  utils.py
bak/di/giphynavigator/: config.yml
bak/di/sample/: app.py  endpoints.py  my_db_client.py  services.py
bak/redis/: caching_srv.py
bak/tests/: pytest_apis.py  test_req.py
configs/: config.toml
di/giphynavigator/: application.py  containers.py  endpoints.py  giphy.py  services.py  tests.py
di/sample/: containers.py
tests/: test_ocr.py
