[tool.poetry]
name = "fastapi-toy-project"
version = "0.1.0"
description = ""
authors = ["Sungsoo <onair0817@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_toy_project"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
