[tool.poetry]
name = "fastapi-toy-project"
version = "0.1.0"
description = ""
authors = ["Sungsoo <onair0817@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_toy_project"}]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.12.0"
pre-commit = "^3.0.2"
mypy = "^0.991"
fastapi = "^0.89.1"
pika = "^1.3.1"
uvicorn = "^0.20.0"
aio-pika = "^8.3.0"
aiohttp = "^3.8.3"
aioredis = "1.3.1"
toml = "^0.10.2"
pytesseract = "^0.3.10"
opencv-python = "^4.7.0.68"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
